<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".DetailRoom"
    android:layout_height="match_parent"
    android:background="#F5FAFF"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FAFF"

    android:orientation="vertical">
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_centerVertical="true" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_support"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#01A3FF"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:elevation="4dp">

        <TextView
            android:id="@+id/judul_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:fontFamily="@font/segoe_ui_bold"
            android:textSize="20dp"
            android:layout_marginStart="15dp"
            android:text="Booking"
            android:textAppearance="@android:style/TextAppearance.WindowTitle"
            android:textColor="#ffffff"
            android:visibility="visible"/>

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar_support"
        android:layout_height="wrap_content"
        android:background="#F5FAFF"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/img_food1"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/img_ballroom"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:scaleType="fitXY"
                android:src="@drawable/saphire_hotel"
                />


        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tv_name_ballroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:layout_marginStart="30dp"
            android:text="@string/nama_hotel"
            android:textSize="18sp"
            android:textColor="#000"
            />

        <TextView
            android:id="@+id/tv_address_balroom"
            android:layout_width="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/segoe_ui"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:textSize="10sp"
            android:layout_marginStart="30dp"
            android:textColor="#000"
   />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="18dp"
            android:layout_marginStart="30dp">
            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"

                android:rating="4"
                android:theme="@style/RatingBar"
               />
            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="5.0" />


        </LinearLayout>
        <TextView
            android:id="@+id/tv_prize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/harga"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="198dp"
            android:layout_marginTop="11dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/include"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="198dp"
            android:layout_marginTop="11dp"/>

        <RelativeLayout

        android:layout_width="match_parent"
        android:id="@+id/linear_sound"
        android:layout_height="71dp"
        android:background="@drawable/linear_menu_new"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="13dp"
        >
        <ImageView
            android:layout_width="61dp"
            android:id="@+id/img_speaker"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:src="@drawable/speaker"
            android:layout_marginVertical="5dp"
            android:layout_alignParentLeft="true"/>


        <TextView
            android:id="@+id/tv_today_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="9dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/img_speaker"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="Sound System"
            android:textColor="#332D2D"
            android:textSize="18sp" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_add_sound"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentRight="true"
            android:layout_marginVertical="20dp"
            android:layout_marginRight="20dp"
            fancy:fb_iconPaddingLeft="0dp"
            fancy:fb_iconPaddingRight="0dp"
            fancy:fb_defaultColor="#ffff"
            fancy:fb_focusColor="#313131"
            fancy:fb_iconResource="@drawable/plus_button"
            fancy:fb_radius="64dp"
            fancy:fb_textColor="#FFFFFF"
            />

    </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:id="@+id/linear_catering"
            android:layout_height="71dp"
            android:background="@drawable/linear_menu_new"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="13dp"
            >
            <ImageView
                android:layout_width="61dp"
                android:id="@+id/img_catering"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:src="@drawable/catering"
                android:layout_marginVertical="5dp"
                android:layout_alignParentLeft="true"/>


            <TextView
                android:id="@+id/tv_today_catering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/img_catering"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="Catering"
                android:textColor="#332D2D"
                android:textSize="18sp" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_add_catering"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_alignParentRight="true"
                android:layout_marginVertical="20dp"
                android:layout_marginRight="20dp"
                fancy:fb_iconPaddingLeft="0dp"
                fancy:fb_iconPaddingRight="0dp"
                fancy:fb_defaultColor="#ffff"
                fancy:fb_focusColor="#313131"
                fancy:fb_iconResource="@drawable/plus_button"
                fancy:fb_radius="64dp"
                fancy:fb_textColor="#FFFFFF"
                />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/date"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="198dp"
            android:layout_marginTop="11dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:layout_marginStart="30dp"
            android:layout_marginTop="17dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_time_picker"
                android:layout_width="50dp"
                android:layout_height="50dp"
               />
            <TextView
                android:id="@+id/tv_once_time"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/tanggal" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_book_now"

            android:layout_width="250dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="27dp"
            android:background="@drawable/radius_burned_button"
            android:text="@string/book_now"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp"  />
    </LinearLayout>
</RelativeLayout>
</ScrollView>